<resources>
    <string name="app_name">My ApplicationGibranApps</string>
    <string name="campus_name">Politeknik Caltex Riau</string>
    <string name="vision_mission">Visi: Menjadi perguruan tinggi vokasi yang unggul dan bermartabat di tingkat nasional maupun internasional.\nMisi: Menyelenggarakan pendidikan vokasi yang berkualitas.</string>
    <string name="btn_explore">Explore More</string>
    <string name="snackbar_text">Menuju Profil PCR</string>

    <!-- Profile Activity -->
    <string name="title_history">Sejarah</string>
    <string name="desc_history">Politeknik Caltex Riau (PCR) resmi berdiri pada tanggal 31 Agustus 2001. Kampus ini didirikan atas prakarsa PT Caltex Pacific Indonesia (sekarang PT Chevron Pacific Indonesia) bekerjasama dengan Pemerintah Provinsi Riau.</string>

    <string name="title_prodi">Program Studi</string>
    <string name="desc_prodi">PCR memiliki berbagai program studi unggulan seperti Teknik Informatika, Sistem Informasi, Teknik Elektronika, Teknik Mekatronika, dan Akuntansi Komputer.</string>

    <string name="title_facilities">Fasilitas</string>
    <string name="desc_facilities">Politeknik Caltex Riau (PCR) di Pekanbaru menyediakan fasilitas kampus modern. Terdapat 27 ruang kelas (kapasitas 36 kursi) ber-AC, 32 laboratorium praktik, dan workshop mesin. Fasilitas pendukung meliputi Perpustakaan koleksi lengkap, Sport Hall (futsal, voli), GSG berkapasitas 2.000 orang, hingga Main Hall PCR.</string>

    <string name="btn_visit_website">Visit Website PCR</string>
    <string name="error_webview">Gagal Memuat Website</string>

    <!-- Welcome Screen -->
    <string name="welcome_title_1">Tentang PCR</string>
    <string name="welcome_desc_1">Politeknik Caltex Riau adalah perguruan tinggi vokasi pertama di Riau yang berstandar internasional.</string>

    <string name="welcome_title_2">Program Studi</string>
    <string name="welcome_desc_2">Memiliki berbagai pilihan program studi diploma dan sarjana terapan yang relevan dengan industri.</string>

    <string name="welcome_title_3">Kenapa Memilih PCR?</string>
    <string name="welcome_desc_3">Lulusan berkualitas, fasilitas modern, dan hubungan erat dengan dunia industri nasional maupun internasional.</string>

    <string name="btn_next">Lanjut</string>
    <string name="btn_finish">Mulai Sekarang</string>

    <!-- Bottom Nav -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Settings</string>
</resources>