<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCampusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campus_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vision_mission"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvCampusName"
        app:layout_constraintBottom_toTopOf="@+id/btnExplore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnExplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_explore"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        android:layout_marginTop="24dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>